binread/tests/ui/invalid_keyword_with_imports.stderr
error: expected one of: `big`, `little`, `map`, `try_map`, `magic`, `import`, `import_tuple`, `assert`, `pre_assert`
 --> $DIR/invalid_keyword_with_imports.rs:5:6
  |
5 | #[br(invalid_struct_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^
